--- a/css/foundation.css
+++ b/css/foundation.css
@@ -4172,3 +4172,190 @@ table.hover tr:nth-of-type(even):hover {
 
 .long-delay {
   animation-delay: 700ms !important; }
+
+  #header {
+    position: fixed;
+    z-index: 10;
+    width: 100%;
+    height: 5rem;
+    background-color: rgba(255, 255, 255, 0.9);
+    box-shadow: 0 0.05rem 1rem rgba(0, 0, 0, 0.15); }
+    #header.scrolled {
+      height: 3rem;
+      background-color: rgba(255, 255, 255, 0.9) !important;
+      box-shadow: 0 0.05rem 1rem rgba(0, 0, 0, 0.15) !important; }
+      #header.scrolled #logo h3 {
+        color: #444 !important;
+        font-size: 1.6rem !important; }
+      #header.scrolled #logo a, #header.scrolled #navbar span {
+        color: #444 !important; }
+      #header.scrolled #navbar a {
+        color: #1BB3E9 !important; }
+        #header.scrolled #navbar a:hover {
+          color: #0e6e90 !important; }
+      #header.scrolled #navbar a:before, #header.scrolled #navbar a:after {
+        background-color: #1BB3E9 !important; }
+      #header.scrolled .navigation {
+        margin-top: 0.5rem !important; }
+    #header > .grid, #header #logo, #header #navbar {
+      height: 100%; }
+    #header #logo {
+      float: left; }
+      #header #logo h3 {
+        font-size: 2rem;
+        line-height: 2rem;
+        margin: 0;
+        text-transform: uppercase; }
+        #header #logo h3 a {
+          color: #444; }
+    #header #navbar {
+      font-size: 0.9rem;
+      /* Child Indicator */ }
+      #header #navbar .has-children > a > span {
+        display: inline-block;
+        padding-right: 8px; }
+        #header #navbar .has-children > a > span:after {
+          font-family: FontAwesome;
+          content: '\f107';
+          position: absolute;
+          display: inline-block;
+          right: 8px;
+          top: 4px; }
+      #header #navbar .has-children > a:after, #header #navbar .has-children > a:before {
+        display: none; }
+      #header #navbar .has-children .has-children > a > span:after {
+        content: '\f105'; }
+      #header #navbar .navigation > .has-children:hover > a {
+        background: #f6f6f6;
+        border: 1px solid #ececec;
+        border-bottom-color: #f6f6f6;
+        margin: -1px -1px 0 -1px;
+        z-index: 1000;
+        position: relative;
+        padding-bottom: 1px; }
+      #header #navbar ul {
+        margin: 0;
+        padding: 0;
+        list-style: none; }
+        #header #navbar ul.navigation {
+          display: inline-block;
+          float: right;
+          margin-top: 1.4rem; }
+          #header #navbar ul.navigation li {
+            float: left;
+            position: relative;
+            /*Active dropdown nav item */
+            /* Dropdown CSS */
+            /* Active on Hover */ }
+            #header #navbar ul.navigation li a {
+              font-family: "Montserrat", "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
+              display: inline-block;
+              padding: 0.3rem 0.8rem;
+              -webkit-backface-visibility: hidden; }
+              #header #navbar ul.navigation li a:before, #header #navbar ul.navigation li a:after {
+                content: "";
+                position: absolute;
+                width: 100%;
+                height: 1px;
+                bottom: 0;
+                left: 0;
+                background-color: #1BB3E9;
+                visibility: hidden;
+                -webkit-transform: scaleX(0);
+                -moz-transform: scaleX(0);
+                -ms-transform: scaleX(0);
+                -o-transform: scaleX(0);
+                transform: scaleX(0);
+                -webkit-transition: all 0.2s ease;
+                -moz-transition: all 0.2s ease;
+                transition: all 0.2s ease; }
+              #header #navbar ul.navigation li a:hover:before {
+                visibility: visible;
+                -webkit-transform: scaleX(0.75);
+                -moz-transform: scaleX(0.75);
+                -ms-transform: scaleX(0.75);
+                -o-transform: scaleX(0.75);
+                transform: scaleX(0.75); }
+              #header #navbar ul.navigation li a.active:after {
+                top: 0;
+                visibility: visible;
+                -webkit-transform: scaleX(0.75);
+                -moz-transform: scaleX(0.75);
+                -ms-transform: scaleX(0.75);
+                -o-transform: scaleX(0.75);
+                transform: scaleX(0.75); }
+            #header #navbar ul.navigation li.active a:after {
+              top: 0;
+              visibility: visible;
+              -webkit-transform: scaleX(0.75);
+              -moz-transform: scaleX(0.75);
+              -ms-transform: scaleX(0.75);
+              -o-transform: scaleX(0.75);
+              transform: scaleX(0.75); }
+            #header #navbar ul.navigation li ul {
+              position: absolute;
+              background-color: #f6f6f6;
+              border: 1px solid #ececec;
+              border-top: 0;
+              min-width: 12rem;
+              text-align: left;
+              z-index: 999;
+              left: -1px;
+              display: none; }
+            #header #navbar ul.navigation li ul li {
+              display: block;
+              float: none;
+              /* Active Dropdown nav item */ }
+              #header #navbar ul.navigation li ul li.active > a {
+                background-color: #ececec;
+                color: #1BB3E9; }
+              #header #navbar ul.navigation li ul li:hover > a {
+                background-color: #1BB3E9;
+                color: #fff; }
+              #header #navbar ul.navigation li ul li a {
+                display: block;
+                margin: 0 -1px; }
+                #header #navbar ul.navigation li ul li a:after, #header #navbar ul.navigation li ul li a:before {
+                  display: none; }
+            #header #navbar ul.navigation li ul ul {
+              left: 100%;
+              top: 0px; }
+            #header #navbar ul.navigation li:hover > ul {
+              display: block; }
+          @media only all and (max-width: 59.938em) {
+            #header #navbar ul.navigation {
+              display: none; } }
+      #header #navbar .panel-activation {
+        padding: 1rem;
+        display: none;
+        font-size: 1.8rem;
+        cursor: pointer;
+        float: right; }
+        @media only all and (max-width: 59.938em) {
+          #header #navbar .panel-activation {
+            display: inline-block; } }
+
+  .header-image.fullwidth #body {
+    padding-left: 0;
+    padding-right: 0; }
+    .header-image.fullwidth #body > .listing-row {
+      padding-left: 7rem;
+      padding-right: 7rem; }
+  .header-image .listing-row:last-child {
+    margin-bottom: 2rem; }
+  .header-image #body .flush-top {
+    margin-top: -9.5rem;
+    padding-top: 9rem; }
+  .header-image #breadcrumbs {
+    margin-top: 1rem; }
+  .header-image #header {
+    background-color: rgba(255, 255, 255, 0);
+    box-shadow: none; }
+    .header-image #header .navigation .has-children:hover a {
+      color: #1BB3E9; }
+    .header-image #header #logo h3, .header-image #header #logo a {
+      color: #FFFFFF; }
+    .header-image #header a, .header-image #header .menu-btn {
+      color: #FFFFFF; }
+    .header-image #header a:before, .header-image #header a:after {
+      background-color: rgba(255, 255, 255, 0.7) !important; }
