--- a/css/foundation.css
+++ b/css/foundation.css
@@ -434,7 +434,8 @@ html {
  * Remove default margin.
  */
 body {
-  margin: 0; }
+  margin: 0;
+  margin-top: 5rem; }
 
 /* HTML5 display definitions
    ========================================================================== */
