--- a/css/foundation.css
+++ b/css/foundation.css
@@ -434,8 +434,7 @@ html {
  * Remove default margin.
  */
 body {
-  margin: 0;
-  margin-top: 5rem; }
+  margin: 0; }
 
 /* HTML5 display definitions
    ========================================================================== */
