Revert "added margin below header"
This reverts commit e08283144f917f1af9e5ac8bf5524042f2ca41bf.

--- a/css/bones-styles.css
+++ b/css/bones-styles.css
@@ -38,8 +38,7 @@ ol {
   text-align: center; }
 
 #header {
-  border-bottom: 1px solid;
-  margin-bottom: 5.0rem; }
+  border-bottom: 1px solid; }
   #header #logo {
     float: left;
     padding: 0;
