--- a/templates/modular/features.html.twig
+++ b/templates/modular/features.html.twig
@@ -1,24 +1,22 @@
 <div class="modular-row features {{ page.header.class}}">
-    <div class="container">
-        {{ content }}
-        <div class="feature-items">
-        {% for feature in page.header.features %}
-               <div class="feature">
-                {% if feature.icon %}
-                <i class="fa fa-fw fa-{{ feature.icon }}"></i>
-                <div class="feature-content push">
-                {% else %}
-                <div class="feature-content">
-                {% endif %}
-                {% if feature.header %}
-                <h4>{{ feature.header }}</h4>
-                {% endif %}
-                {% if feature.text %}
-                <p>{{ feature.text }}</p>
-                {% endif %}
-                </div>
+    {{ content }}
+    <div class="feature-items">
+    {% for feature in page.header.features %}
+           <div class="feature">
+            {% if feature.icon %}
+            <i class="fa fa-fw fa-{{ feature.icon }}"></i>
+            <div class="feature-content icon-offset">
+            {% else %}
+            <div class="feature-content">
+            {% endif %}
+            {% if feature.header %}
+            <h4>{{ feature.header }}</h4>
+            {% endif %}
+            {% if feature.text %}
+            <p>{{ feature.text }}</p>
+            {% endif %}
             </div>
-        {% endfor %}
         </div>
+    {% endfor %}
     </div>
 </div>
