--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -1,3 +1,4 @@
+<div class="top-bar stacked-for-medium">
 <nav class="top-bar" data-topbar role="navigation">
   <ul class="title-area">
     <li class="name">
@@ -20,3 +21,4 @@
 
   </section>
 </nav>
+</div>
