--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -1,16 +1,16 @@
-<div class="top-bar stacked-for-medium">
 <nav class="top-bar" data-topbar role="navigation">
-  <ul class="title-area">
-    <li class="name">
-      <h1><a href="#">Tango</a></h1>
-    </li>
-     <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
-  </ul>
 
-  <section class="top-bar-section">
-    <!-- Right Nav Section -->
-    <ul class="right">
+<div class="top-bar-title">
+  <span data-responsive-toggle="responsive-menu" data-hide-for="medium">
+    <button class="menu-icon dark" type="button" data-toggle></button>
+  </span>
+  <strong><a href="#">Tango</a></strong>
+</div>
+
+<div id="responsive-menu">
+   <div class="top-bar-left">
+    <!-- Left Nav Section -->
+    <ul class="menu vertical">
       {% for page in pages.children %}
       {% if page.visible %}
       {% set current_page = (page.active or page.activeChild) ? 'active' : '' %}
@@ -18,7 +18,14 @@
       {% endif %}
       {% endfor %}
     </ul>
-
-  </section>
-</nav>
+  </div>
 </div>
+
+<div class="top-bar-right">
+      <ul class="menu">
+        <li><input type="search" placeholder="Search"></li>
+        <li><button type="button" class="button">Search</button></li>
+      </ul>
+    </div>
+
+</nav>
