--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -1,8 +1,7 @@
-<nav class="top-bar" data-topbar role="navigation">
-
-<div class="top-bar-title">
-  <span data-responsive-toggle="responsive-menu" data-hide-for="medium">
-    <button class="menu-icon dark" type="button" data-toggle></button>
+<div class="top-bar">
+  <div class="top-bar-title">
+    <span data-responsive-toggle="responsive-menu" data-hide-for="medium">
+      <button class="menu-icon dark" type="button" data-toggle></button>
   </span>
   <strong><a href="#">Tango</a></strong>
 </div>
@@ -20,7 +19,7 @@
     </ul>
   </div>
 </div>
-
+</div>
 <div class="top-bar-right">
       <ul class="menu">
         <li><input type="search" placeholder="Search"></li>
@@ -28,4 +27,4 @@
       </ul>
     </div>
 
-</nav>
+</div>
